fix(form-field): hints gap (#DS-4249)

--- a/packages/components/form-field/fieldset-tokens.scss
+++ b/packages/components/form-field/fieldset-tokens.scss
@@ -1,5 +1,5 @@
 .kbq-fieldset {
     --kbq-fieldset-legend-margin: var(--kbq-size-s);
-    --kbq-form-field-hint-size-margin-top: var(--kbq-size-xs);
+    --kbq-form-field-hint-size-margin-top: var(--kbq-size-m);
     --kbq-form-field-hint-text: var(--kbq-foreground-contrast-secondary);
 }
